# karp-6-backend-rs

./: Cargo.toml
.github/workflows/: build.yml
server/: Cargo.toml
server/src/: main.rs
src/: error.rs  lib.rs  main.rs
src/api/: documentation_controller.rs  mod.rs  resource_controller.rs
src/config/: app.rs  db.rs
