[package]
name = "karp"
version = "0.1.0"
authors = ["Kristoffer Andersson <6058164+kod-kristoff@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
actix-rt = "1.1"
derive_more = "0.99.13"
log = "0.4.14"
env_logger = "0.8.3"
actix-service = "1.0.6"
diesel = { version = "1.4.6", features = ["sqlite", "r2d2"] }

[dev-dependencies]
