[package]
name = "server"
version = "0.1.0"
authors = ["Kristoffer Andersson <6058164+kod-kristoff@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
derive_more = "0.99.13"

[dev-dependencies]
actix-rt = "1"
